# taction

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: test_matrix.yml  valgrind.yml
src/taction/: __init__.py
src/taction-ext/include/taction/: main.hpp
src/taction-ext/src/: bindings.cpp  main.cpp
tests/: test_extension.py
